Avance Proyecto 9 de marzo

--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -1,6 +1,223 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comercio de divisas Proyecto Parcial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objetivos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objetivos específicos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo que representa el problema."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una transacción de moneda spot es un acuerdo para comprar una cantidad de una moneda usando otra moneda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Peso Mexicano</th>\n",
+       "      <th>Dólar USD</th>\n",
+       "      <th>Euro</th>\n",
+       "      <th>Yen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Peso Mexicano</th>\n",
+       "      <td>-</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>0.04123</td>\n",
+       "      <td>4.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dólar USD</th>\n",
+       "      <td>21.1978</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0.88518</td>\n",
+       "      <td>102.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Euro</th>\n",
+       "      <td>24.2149</td>\n",
+       "      <td>1.14233</td>\n",
+       "      <td>-</td>\n",
+       "      <td>117.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yen</th>\n",
+       "      <td>0.2068</td>\n",
+       "      <td>0.00976</td>\n",
+       "      <td>0.00854</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Peso Mexicano Dólar USD     Euro     Yen\n",
+       "Peso Mexicano             -     0.048  0.04123    4.83\n",
+       "Dólar USD           21.1978         -  0.88518  102.48\n",
+       "Euro                24.2149   1.14233        -  117.07\n",
+       "Yen                  0.2068   0.00976  0.00854       -"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(columns=['Peso Mexicano', 'Dólar USD', 'Euro', 'Yen'], index = ['Peso Mexicano','Dólar USD','Euro','Yen'])\n",
+    "df.loc['Peso Mexicano', :] = [ \"-\", 0.048, 0.04123,4.83]\n",
+    "df.loc['Dólar USD', :] = [  21.1978, \"-\",0.88518,102.48]\n",
+    "df.loc['Euro', :] = [24.2149,  1.14233, \"-\",117.07]\n",
+    "df.loc['Yen', :] = [ 0.20680,0.00976, 0.00854, \"-\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solución del problema de optimización."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.optimize as opt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escriba acá las matrices como arreglos de Numpy\n",
+    "c = -np.array([-1,-1,-1,21.1978,0,0,24.2149,0,0,0.2068,0,0])\n",
+    "\n",
+    "A = np.array([[-1,-1,-1,21.1978,0,0,24.2149,0,0,0.2068,0,0],\n",
+    "              [1,1,1,-21.1978,0,0,-24.2149,0,0,-0.2068,0,0],\n",
+    "              [-0.048,0,0,1,1,1,0,-1.1423,0,0,-0.00854,0],\n",
+    "              [0,-0.04123,0,0,-0.8851,0,1,1,1,0,0,-0.00854],\n",
+    "                [0,0,-4.83,0,0,-102.48,0,0,-117.07,1,1,1]])\n",
+    "b = np.array([100,0,0,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     con: array([], dtype=float64)\n",
+       "     fun: -99.99999999999987\n",
+       " message: 'Optimization terminated successfully.'\n",
+       "     nit: 8\n",
+       "   slack: array([1.27897692e-13, 1.00000000e+02, 0.00000000e+00, 0.00000000e+00,\n",
+       "       0.00000000e+00])\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([  0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "       426.91934136,   0.        ,   4.12968875, 373.73662029,\n",
+       "         0.        ,   0.        ,   0.        ,   0.        ])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = opt.linprog(c,A,b,method=\"simplex\")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concluimos con lo siguiente:\n",
+    "Para alcanzar la ganancia deseada de no más de $ 100 MXN se tiene que hacer las inversiones de las las siguientes divisas de la siguiente manera. \n",
+    "\n",
+    "1. Se invertirá 373.73662029 Euros a USD \n",
+    "2. Después haremos la conversión de $ 426.91934136 USD de nuevo a Euros.\n",
+    "\n",
+    "3. Sacamos la diferencia de los Euros obtenidos y los que teníamos. Se invertirá la diferencia de 4.12968875 Euros a MXN con lo que se obtendrá una ganancia de no más de $ 100 MXN\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
