Modificaciones 10 de marzo a las 3 pm

--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -124,11 +124,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "La función a maximizar viene dada por:\n",
+    "\n",
+    "$$f1= 21.1978x21 + 24.2149x31+ 0.2068x41-x12-x13-x14$$\n",
+    "\n",
+    "Las restriccones son:\n",
+    "\n",
+    "$$f1= 21.1978x21 + 24.2149x31+ 0.2068x41-x12-x13-x14\\leq 100 $$\n",
+    "$$f1= 21.1978x21 + 24.2149x31+ 0.2068x41-x12-x13-x14\\geq 0 $$\n",
+    "$$f2= 0.048x12+1.1423x32+0.009764x42-x21-x23-x24\\geq 0 $$\n",
+    "$$f3= 0.04123x13+0.8851x23+0.00854x43-x31-x32-x34\\geq 0 $$\n",
+    "$$f4=4.83x14+102.48x24+117.07x34-x41-x42-x43\\geq 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo que pretendemos hacer maximizando (f1) es obtener la mayor ganancia en pesos mexicanos MXN para conseguir un mejor arbitraje con la transacción de divisas. Buscamos cuál será la mejor ruta para lograr eso. \n",
+    "\n",
+    "La primer restricción es que la función que pretendemos maximizar sea menor o igual a 100 pesos mexicanos. Esa es la ganancia que estamos buscando\n",
+    "\n",
+    "La siguientes restricciones son para que no haya "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +179,7 @@
     "\n",
     "A = np.array([[-1,-1,-1,21.1978,0,0,24.2149,0,0,0.2068,0,0],\n",
     "              [1,1,1,-21.1978,0,0,-24.2149,0,0,-0.2068,0,0],\n",
-    "              [-0.048,0,0,1,1,1,0,-1.1423,0,0,-0.00854,0],\n",
+    "              [-0.048,0,0,1,1,1,0,-1.1423,0,0,-0.00976,0],\n",
     "              [0,-0.04123,0,0,-0.8851,0,1,1,1,0,0,-0.00854],\n",
     "                [0,0,-4.83,0,0,-102.48,0,0,-117.07,1,1,1]])\n",
     "b = np.array([100,0,0,0,0])"
@@ -166,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +206,7 @@
        "         0.        ,   0.        ,   0.        ,   0.        ])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
