Actualización 10 de marzo a las 4:45pm

--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "Yen                  0.2068   0.00976  0.00854       -"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,8 +120,22 @@
     "df.loc['Dólar USD', :] = [  21.1978, \"-\",0.88518,102.48]\n",
     "df.loc['Euro', :] = [24.2149,  1.14233, \"-\",117.07]\n",
     "df.loc['Yen', :] = [ 0.20680,0.00976, 0.00854, \"-\"]\n",
-    "df"
+    "df\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tabla actualizada el 9 de marzo del 2020 a las 4pm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -148,7 +162,7 @@
     "\n",
     "La primer restricción es que la función que pretendemos maximizar sea menor o igual a 100 pesos mexicanos. Esa es la ganancia que estamos buscando\n",
     "\n",
-    "La siguientes restricciones son para que no haya "
+    "La siguientes restricciones son para que no haya transacciones negativas por lo tanto tiene que ser mayor o igual a cero. "
    ]
   },
   {
