Actualización 10 de marzo a las 6:40pm

--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Peso Mexicano</th>\n",
-       "      <td>-</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.048</td>\n",
        "      <td>0.04123</td>\n",
        "      <td>4.83</td>\n",
@@ -78,7 +78,7 @@
        "    <tr>\n",
        "      <th>Dólar USD</th>\n",
        "      <td>21.1978</td>\n",
-       "      <td>-</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.88518</td>\n",
        "      <td>102.48</td>\n",
        "    </tr>\n",
@@ -86,7 +86,7 @@
        "      <th>Euro</th>\n",
        "      <td>24.2149</td>\n",
        "      <td>1.14233</td>\n",
-       "      <td>-</td>\n",
+       "      <td>1</td>\n",
        "      <td>117.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -94,7 +94,7 @@
        "      <td>0.2068</td>\n",
        "      <td>0.00976</td>\n",
        "      <td>0.00854</td>\n",
-       "      <td>-</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -102,13 +102,13 @@
       ],
       "text/plain": [
        "              Peso Mexicano Dólar USD     Euro     Yen\n",
-       "Peso Mexicano             -     0.048  0.04123    4.83\n",
-       "Dólar USD           21.1978         -  0.88518  102.48\n",
-       "Euro                24.2149   1.14233        -  117.07\n",
-       "Yen                  0.2068   0.00976  0.00854       -"
+       "Peso Mexicano             1     0.048  0.04123    4.83\n",
+       "Dólar USD           21.1978         1  0.88518  102.48\n",
+       "Euro                24.2149   1.14233        1  117.07\n",
+       "Yen                  0.2068   0.00976  0.00854       1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,10 +116,10 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.DataFrame(columns=['Peso Mexicano', 'Dólar USD', 'Euro', 'Yen'], index = ['Peso Mexicano','Dólar USD','Euro','Yen'])\n",
-    "df.loc['Peso Mexicano', :] = [ \"-\", 0.048, 0.04123,4.83]\n",
-    "df.loc['Dólar USD', :] = [  21.1978, \"-\",0.88518,102.48]\n",
-    "df.loc['Euro', :] = [24.2149,  1.14233, \"-\",117.07]\n",
-    "df.loc['Yen', :] = [ 0.20680,0.00976, 0.00854, \"-\"]\n",
+    "df.loc['Peso Mexicano', :] = [ 1, 0.048, 0.04123,4.83]\n",
+    "df.loc['Dólar USD', :] = [  21.1978, 1,0.88518,102.48]\n",
+    "df.loc['Euro', :] = [24.2149,  1.14233, 1,117.07]\n",
+    "df.loc['Yen', :] = [ 0.20680,0.00976, 0.00854, 1]\n",
     "df\n"
    ]
   },
