Imagen agregada al notebook

--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -143,15 +143,37 @@
    "source": [
     "La función a maximizar viene dada por:\n",
     "\n",
-    "$$f1= 21.1978x21 + 24.2149x31+ 0.2068x41-x12-x13-x14$$\n",
+    "$$f1= 21.1978x_{21} + 24.2149x_{31}+ 0.2068x_{41}-x_{12}-x_{13}-x_{14}$$\n",
     "\n",
     "Las restriccones son:\n",
     "\n",
-    "$$f1= 21.1978x21 + 24.2149x31+ 0.2068x41-x12-x13-x14\\leq 100 $$\n",
-    "$$f1= 21.1978x21 + 24.2149x31+ 0.2068x41-x12-x13-x14\\geq 0 $$\n",
-    "$$f2= 0.048x12+1.1423x32+0.009764x42-x21-x23-x24\\geq 0 $$\n",
-    "$$f3= 0.04123x13+0.8851x23+0.00854x43-x31-x32-x34\\geq 0 $$\n",
-    "$$f4=4.83x14+102.48x24+117.07x34-x41-x42-x43\\geq 0 $$"
+    "$$f1= 21.1978x_{21} + 24.2149x_{31}+ 0.2068x_{41}-x_{12}-x_{13}-x_{14}\\leq 100 $$\n",
+    "$$f1= 21.1978x_{21} + 24.2149x_{31}+ 0.2068x_{41}-x_{12}-x_{13}-x_{14}\\geq 0 $$\n",
+    "$$f2= 0.048x_{12}+1.1423x_{32}+0.009764x_{42}-x_{21}-x_{23}-x_{24}\\geq 0 $$\n",
+    "$$f3= 0.04123x_{13}+0.8851x_{23}+0.00854x_{43}-x_{31}-x_{32}-x_{34}\\geq 0 $$\n",
+    "$$f4=4.83x_{14}+102.48x_{24}+117.07x_{34}-x_{41}-x_{42}-x_{43}\\geq 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las variables involucradas son:\n",
+    "<ul>\n",
+    "    \n",
+    "   <li>$x_{12}$ Peso a USD</li>\n",
+    "    <li>$x_{13}$ Peso a Euro</li>\n",
+    "    <li>$x_{14}$ Peso a Yen</li>\n",
+    "    <li>$x_{21}$ USD a Peso</li>\n",
+    "    <li>$x_{23}$ USD a Euro</li>\n",
+    "    <li>$x_{24}$ USD a Yen</li>\n",
+    "    <li>$x_{31}$ Euro a Peso</li>\n",
+    "    <li>$x_{32}$ Euro a USD</li>\n",
+    "    <li>$x_{34}$ Euro a Yen</li>\n",
+    "    <li>$x_{41}$ Yen a Peso</li>\n",
+    "    <li>$x_{42}$ Yen a USD</li>\n",
+    "    <li>$x_{43}$ Yen a Euro</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -201,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +242,7 @@
        "         0.        ,   0.        ,   0.        ,   0.        ])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +250,21 @@
    "source": [
     "sol = opt.linprog(c,A,b,method=\"simplex\")\n",
     "sol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualización de la solución del problema"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Esquema proyecto.jpeg\" style=\"max-width: 450px;\">"
    ]
   },
   {
