--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -11,14 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objetivos"
+    "## Objetivo\n",
+    "Formular un modelo de decisión para detectar oportunidades de arbitraje en el mercado de divisas de contado."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objetivos específicos"
+    "## Objetivos específicos\n",
+    "\n",
+    "- Utilizar datos actuales de la tasa de cambio\n",
+    "- Crear un programa de programación lineal para conseguir el mejor arbitraje\n",
+    "- Tener transacciones deben de ser positivas.\n",
+    "- Maximizar la cantidad neta final menor o igual a 100 MXN."
    ]
   },
   {
@@ -37,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +114,7 @@
        "Yen                  0.2068   0.00976  0.00854       1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,13 +135,6 @@
    "source": [
     "Tabla actualizada el 9 de marzo del 2020 a las 4pm."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +241,7 @@
        "         0.        ,   0.        ,   0.        ,   0.        ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +270,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al utilizar la programación lineal en este problema pudimos obtener de manera precisa el mejor arbitraje en lo planteado.\n",
+    "\n",
     "Concluimos con lo siguiente:\n",
     "Para alcanzar la ganancia deseada de no más de $ 100 MXN se tiene que hacer las inversiones de las las siguientes divisas de la siguiente manera. \n",
     "\n",
