--- a/PM1_GonzalezG_DurmullerA_MichelD.ipynb
+++ b/PM1_GonzalezG_DurmullerA_MichelD.ipynb
@@ -291,11 +291,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Referencias\n",
+    "Columbia Business School. (s.f.). Decision Models Lecture 5. Recuperado de http://www.meiss.com/columbia/en/teaching/1999/fall/B6015/download/lecture05/lec5.pdf"
+   ]
   },
   {
    "cell_type": "code",
